[gd_scene load_steps=18 format=3 uid="uid://ctktm4lttleco"]

[ext_resource type="Script" uid="uid://ccornqo045y1x" path="res://Scripts/coin.gd" id="1_0t63x"]
[ext_resource type="Texture2D" uid="uid://br0e2lxivvur4" path="res://brackeys_platformer_assets/sprites/coin.png" id="1_d5gmh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v7riw"]
atlas = ExtResource("1_d5gmh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdq0q"]
atlas = ExtResource("1_d5gmh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w14il"]
atlas = ExtResource("1_d5gmh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4etq"]
atlas = ExtResource("1_d5gmh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4fra"]
atlas = ExtResource("1_d5gmh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2np"]
atlas = ExtResource("1_d5gmh")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1j4n"]
atlas = ExtResource("1_d5gmh")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1mwu"]
atlas = ExtResource("1_d5gmh")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf4yh"]
atlas = ExtResource("1_d5gmh")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciu18"]
atlas = ExtResource("1_d5gmh")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybu58"]
atlas = ExtResource("1_d5gmh")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5w7y"]
atlas = ExtResource("1_d5gmh")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_relgi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7riw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdq0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w14il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4etq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4fra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1j4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1mwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf4yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciu18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybu58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5w7y")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0t63x"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v7riw"]
radius = 9.0

[node name="Coin" type="Area2D"]
collision_mask = 2
script = ExtResource("1_0t63x")

[node name="Activation" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_relgi")
autoplay = "default"
frame_progress = 0.197239

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0t63x")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_v7riw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Activation" to="." method="_on_activation_timeout"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
